--- a/client/index.ejs
+++ b/client/index.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>React Redux ToDo</title>
+  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1, maximum-scale=1">
 </head>
 <body>
   <div id="container"></div>
