--- a/client/components/Header/HeaderComponent.scss
+++ b/client/components/Header/HeaderComponent.scss
@@ -1,3 +1,21 @@
 .headerContainer {
-  background-color: yellow;
+  width: 100%;
+  height: 70px; 
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+}
+
+.linkContainer {
+  margin-right: 5%;
+}
+
+.link {
+  color: #000080;
+}
+
+.link:hover {
+  color: blue;
 }
