--- a/client/index.ejs
+++ b/client/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>React Redux ToDo</title>
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1, maximum-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
   <div id="container"></div>
