--- a/client/components/Register/RegisterComponent.scss
+++ b/client/components/Register/RegisterComponent.scss
@@ -1,4 +1,4 @@
-.loginContainer {
+.registerContainer {
   margin-top: 40px;
   width: 100%;
   height: 100%;
@@ -6,14 +6,14 @@
   flex-direction: column;
   align-items: center;
 
-  .loginTitle {
+  .registerTitle {
     margin-bottom: 35px;
     line-height: 1.5;
     font-size: 2.8rem;
     font-weight: 700;
     color: #000080;
   }
-  .loginForm {
+  .registerForm {
     width: 35%;
     .inputContainer {
       .input {
@@ -34,7 +34,7 @@
         width: 100%;
         height: 50px;
         margin-left: 2px;
-        background-color: #4EB14D;
+        background-color: #098AF2;
         color: white;
         font-size: 1.5rem;
         outline: none;
