--- a/client/styles/_reset.scss
+++ b/client/styles/_reset.scss
@@ -6,7 +6,7 @@ fieldset, form, label,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header,
 menu, nav {
-  color: #DCDCDC;
+  color: #000080;
   margin: 0;
   padding: 0;
   border: 0;
