--- a/client/components/Header/HeaderComponent.scss
+++ b/client/components/Header/HeaderComponent.scss
@@ -1,6 +1,7 @@
 .headerContainer {
   width: 100%;
   height: 70px; 
+  margin-bottom: 40px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
