--- a/client/components/Todo/TodoComponent.scss
+++ b/client/components/Todo/TodoComponent.scss
@@ -1,7 +1,7 @@
 .todoContainer {
   width: 100%;
   height: 100%;
-  margin: 40px 0 40px;
+  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
