add error messages for login and register components

--- a/client/components/Register/RegisterComponent.scss
+++ b/client/components/Register/RegisterComponent.scss
@@ -12,6 +12,10 @@
     font-weight: 700;
     color: #000080;
   }
+  .error {
+    color: red;
+    margin-bottom: 20px;
+  }
   .registerForm {
     width: 35%;
     .inputContainer {
