--- a/client/components/Login/LoginComponent.scss
+++ b/client/components/Login/LoginComponent.scss
@@ -12,6 +12,12 @@
     font-weight: 700;
     color: #000080;
   }
+
+  .error {
+    color: red;
+    margin-bottom: 20px;
+  }
+
   .loginForm {
     width: 35%;
     .inputContainer {
